<resources>
    <string name="app_name">Bianka`s Inventory App</string>
    <string name="action_dummy">Insert dummy data</string>
    <string name="action_delete">Delete all data</string>
    <string name="empty_view_text">"Your inventory is empty at the moment.\n
        Start adding items to it with the + button!"</string>
    <string name="add_image_tv">Click here to insert image!</string>
    <string name="item_name">Item`s name</string>
    <string name="item_price">Item`s price</string>
    <string name="supplier_name">Supplier`s name</string>
    <string name="supplier_email">Supplier`s email</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_supplier_name">Supplier`s name</string>
    <string name="hint_supplier_email">supplier@email.com</string>
    <string name="minus"> - </string>
    <string name="plus"> + </string>
    <string name="currency">£</string>
    <string name="order">Order more</string>
    <string name="add_item_title">Add item</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="change_photo">Click to change photo</string>
    <string name="intentType">image/*</string>
    <string name="selectPicture">Select Picture</string>
    <string name="notLessQuantity">The quantity cannot be less than 0! </string>
    <string name="discard_and_quit">Discard your changes and quit editing?</string>
    <string name="discard">Yes, let`s discard my changes.</string>
    <string name="keep_editing">No, let`s keep editing.</string>
    <string name="action_save">Save all.</string>
    <string name="itemNameReq">Product name required</string>
    <string name="itemPriceReq">Product price required</string>
    <string name="supplierNameReq">Supplier name required</string>
    <string name="supplierEmailReq">Supplier email required</string>
    <string name="quantityReq">Product quantity required</string>
    <string name="itemPicReq">Product picture required</string>
    <string name="error_saving_item">Error saving product</string>
    <string name="item_saved">Product saved</string>
    <string name="editor_delete_item_done">Product deleted</string>
    <string name="editor_delete_item_failed">Error with deleting product</string>
    <string name="delete_item_message">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="soldOut">Item sold out</string>
    <string name="empty_text">No items to show... :(</string>
    <string name="empty_text_2">Please add items!</string>

</resources>
